[gd_scene load_steps=11 format=2]

[ext_resource path="res://interactable_scripts/base/InteractionArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/levers/Switch.gd" type="Script" id=2]
[ext_resource path="res://objects/levers/turn_on.ogg" type="AudioStream" id=3]
[ext_resource path="res://objects/levers/turn_off.ogg" type="AudioStream" id=4]
[ext_resource path="res://objects/levers/sprites/wood_on.png" type="Texture" id=5]
[ext_resource path="res://objects/levers/sprites/wood_off.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 128.0

[sub_resource type="Animation" id=4]
resource_name = "SETUP"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "turn_off"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "turn_on"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[node name="Switch" type="Node2D"]
script = ExtResource( 2 )

[node name="TurnOn" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="TurnOn" index="0"]
shape = SubResource( 1 )

[node name="Sfx" parent="TurnOn" index="1"]
stream = ExtResource( 3 )

[node name="NinePatchRect" parent="TurnOn" index="2"]
margin_top = -224.0
margin_bottom = -104.0

[node name="TurnOff" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="TurnOff" index="0"]
shape = SubResource( 1 )

[node name="Sfx" parent="TurnOff" index="1"]
stream = ExtResource( 4 )

[node name="NinePatchRect" parent="TurnOff" index="2"]
margin_top = -224.0
margin_bottom = -104.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = SubResource( 4 )
anims/turn_off = SubResource( 2 )
anims/turn_on = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -64 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
[connection signal="interacted" from="TurnOn" to="." method="turn_on"]
[connection signal="interacted" from="TurnOff" to="." method="turn_off"]

[editable path="TurnOn"]

[editable path="TurnOff"]
